--- a/config/services/context/delivery.yaml
+++ b/config/services/context/delivery.yaml
@@ -7,3 +7,8 @@ services:
                 class: App\Application\Delivery\Create\DeliveryCreate
                 tags:
                     - { name: tactician.handler, command: App\Application\Delivery\Create\DeliveryCreateCommand }
+
+    Department.GET_handler:
+                class: App\Application\Delivery\GetByOrderId\DeliveryGetOrderId
+                tags:
+                    - { name: tactician.handler, command: App\Application\Delivery\GetByOrderId\DeliveryGetOrderIdCommand }
