--- a/config/routes/context/delivery.yaml
+++ b/config/routes/context/delivery.yaml
@@ -1,4 +1,9 @@
 CreateDelivery:
     path: /Delivery/create/
     controller: App\Infrastructure\Controller\DeliveryController::createDelivery
+    methods: [POST]
+
+GetDelivery:
+    path: /Delivery/
+    controller: App\Infrastructure\Controller\DeliveryController::getByOrderId
     methods: [GET]
